[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/scenes/board.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/themes/custom_theme.tres" type="Theme" id=2]
[ext_resource path="res://assets/scenes/settings_screen.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/scripts/game_scene.gd" type="Script" id=6]
[ext_resource path="res://assets/scenes/button2.tscn" type="PackedScene" id=7]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.2, 0.231373, 0.309804, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.0784314, 0.0901961, 0.133333, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.2, 0.231373, 0.309804, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.780392, 0.780392, 0.780392, 1 )
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 0.588235 )
border_color = Color( 0, 0, 0, 0 )

[sub_resource type="Animation" id=5]
resource_name = "show_settings"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("SettingsScreen:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 810 ), Vector2( 0, 0 ) ]
}

[node name="GameScene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 1280, 800 )
mouse_filter = 2
theme = ExtResource( 2 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 50.0
margin_right = -50.0
margin_bottom = -50.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 1176.0
margin_bottom = 696.0
mouse_filter = 2
size_flags_vertical = 3

[node name="HSplitContainer" type="HSplitContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 1172.0
margin_bottom = 120.0

[node name="Options" parent="MarginContainer/VBoxContainer/HSplitContainer" instance=ExtResource( 7 )]
margin_left = -1.52588e-05
margin_top = -1.0
margin_right = 240.0
margin_bottom = 119.0
rect_min_size = Vector2( 240, 120 )
size_flags_horizontal = 8
size_flags_vertical = 4

[node name="Restart" parent="MarginContainer/VBoxContainer/HSplitContainer" instance=ExtResource( 7 )]
margin_left = 932.0
margin_top = -1.0
margin_right = 1172.0
margin_bottom = 119.0
rect_min_size = Vector2( 240, 120 )
size_flags_horizontal = 8
size_flags_vertical = 4

[node name="VSeparator" type="VSeparator" parent="MarginContainer/VBoxContainer"]
margin_top = 124.0
margin_right = 1172.0
margin_bottom = 127.0
size_flags_vertical = 2

[node name="HSplitContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_left = 216.0
margin_top = 158.0
margin_right = 956.0
margin_bottom = 658.0
size_flags_horizontal = 4

[node name="Moves" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HSplitContainer2"]
margin_top = 224.0
margin_right = 59.0
margin_bottom = 276.0
mouse_filter = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="MoveText" type="Label" parent="MarginContainer/VBoxContainer/HSplitContainer2/Moves"]
margin_right = 59.0
margin_bottom = 24.0
text = "Moves"
align = 1
valign = 1

[node name="MoveValue" type="Label" parent="MarginContainer/VBoxContainer/HSplitContainer2/Moves"]
margin_top = 28.0
margin_right = 59.0
margin_bottom = 52.0
text = "0"
align = 1
valign = 1

[node name="VSplitContainer" type="VSplitContainer" parent="MarginContainer/VBoxContainer/HSplitContainer2"]
margin_left = 63.0
margin_right = 113.0
rect_min_size = Vector2( 50, 0 )
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="GameView" type="MarginContainer" parent="MarginContainer/VBoxContainer/HSplitContainer2"]
margin_left = 117.0
margin_right = 617.0
margin_bottom = 500.0
rect_min_size = Vector2( 500, 500 )
mouse_filter = 2
size_flags_horizontal = 6
size_flags_vertical = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundBoard" type="Panel" parent="MarginContainer/VBoxContainer/HSplitContainer2/GameView"]
margin_right = 500.0
margin_bottom = 500.0
mouse_filter = 2
custom_styles/panel = SubResource( 2 )

[node name="board" parent="MarginContainer/VBoxContainer/HSplitContainer2/GameView" instance=ExtResource( 1 )]
margin_right = 500.0
margin_bottom = 500.0

[node name="BoardBorder" type="Panel" parent="MarginContainer/VBoxContainer/HSplitContainer2/GameView"]
margin_right = 500.0
margin_bottom = 500.0
mouse_filter = 2
custom_styles/panel = SubResource( 3 )

[node name="StartOverlay" type="Panel" parent="MarginContainer/VBoxContainer/HSplitContainer2/GameView"]
visible = false
margin_right = 500.0
margin_bottom = 500.0
mouse_filter = 2
custom_styles/panel = SubResource( 4 )

[node name="Start" parent="MarginContainer/VBoxContainer/HSplitContainer2/GameView" instance=ExtResource( 7 )]
margin_top = 217.0
margin_right = 500.0
margin_bottom = 282.0
rect_min_size = Vector2( 65, 65 )
size_flags_vertical = 4

[node name="VSplitContainer2" type="VSplitContainer" parent="MarginContainer/VBoxContainer/HSplitContainer2"]
margin_left = 621.0
margin_right = 671.0
rect_min_size = Vector2( 50, 0 )
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Time" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HSplitContainer2"]
margin_left = 675.0
margin_top = 224.0
margin_right = 740.0
margin_bottom = 276.0
mouse_filter = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="TimeTitle" type="Label" parent="MarginContainer/VBoxContainer/HSplitContainer2/Time"]
margin_right = 65.0
margin_bottom = 24.0
text = "Time"
align = 1
valign = 1

[node name="TimeValue" type="Label" parent="MarginContainer/VBoxContainer/HSplitContainer2/Time"]
margin_top = 28.0
margin_right = 65.0
margin_bottom = 52.0
rect_min_size = Vector2( 65, 24 )
text = "0s"
align = 1
valign = 2

[node name="VSeparator2" type="VSeparator" parent="MarginContainer/VBoxContainer"]
margin_top = 662.0
margin_right = 1172.0
margin_bottom = 665.0
size_flags_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsScreen" parent="." instance=ExtResource( 3 )]
margin_top = 816.0
margin_bottom = 816.001
mouse_filter = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/show_settings = SubResource( 5 )
[connection signal="game_started" from="MarginContainer/VBoxContainer/HSplitContainer2/GameView/board" to="." method="_on_Board_game_started"]
[connection signal="game_won" from="MarginContainer/VBoxContainer/HSplitContainer2/GameView/board" to="." method="_on_Board_game_won"]
[connection signal="moves_updated" from="MarginContainer/VBoxContainer/HSplitContainer2/GameView/board" to="." method="_on_Board_moves_updated"]
[connection signal="background_update" from="SettingsScreen" to="." method="_on_SettingsScreen_background_update"]
[connection signal="board_size_update" from="SettingsScreen" to="." method="_on_SettingsScreen_board_size_update"]
[connection signal="hide_settings" from="SettingsScreen" to="." method="_on_SettingsScreen_hide_settings"]
[connection signal="show_numbers_update" from="SettingsScreen" to="." method="_on_SettingsScreen_show_numbers_update"]
